# wiktionary-en-cli

./: .gitignore  .nvim.lua  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  justfile  wiktionary-en-config.lua  wiktionary-en-config2.lua  wiktionary-en-extensions.lua
couchdb/: .gitignore  docker-compose.yaml  single-node.ini
crates/polodb-import/: Cargo.toml
crates/polodb-import/src/: main.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: anyhow_serde.rs  cache_utils.rs  colored_string_utils.rs  env_macros.rs  file_utils.rs  language.rs  lib.rs  macros.rs  pager.rs
crates/wiktionary-en-cli/: Cargo.toml  build.rs
crates/wiktionary-en-cli/src/: exhaustive_search.rs  main.rs  result_wrapper.rs  stats.rs  wiktionary_stats.rs
crates/wiktionary-en-db/: Cargo.toml
crates/wiktionary-en-db/src/: client.rs  client_lua.rs  couchdb_client.rs  lib.rs  wiktionary_en_db.rs  wiktionary_en_db_lua.rs
crates/wiktionary-en-download/: Cargo.toml
crates/wiktionary-en-download/src/: lib.rs
crates/wiktionary-en-entities/: Cargo.toml
crates/wiktionary-en-entities/src/: config.rs  config_lua.rs  dictionary_entry.rs  dictionary_entry_lua.rs  history_entry.rs  history_entry_lua.rs  lib.rs  result.rs  result_lua.rs  results.rs  results_lua.rs  wiktionary_config_lua.rs  wiktionary_entity.rs  wiktionary_entity_lua.rs  wiktionary_entry.rs  wiktionary_entry_lua.rs  wiktionary_history.rs  wiktionary_history_lua.rs  wiktionary_result.rs  wiktionary_result_lua.rs
crates/wiktionary-en-identifier-index/: Cargo.toml
crates/wiktionary-en-identifier-index/src/: channel.rs  channels.rs  indexing_stream.rs  lib.rs  main.rs  wiktionary_channel.rs
crates/wiktionary-en-import/: Cargo.toml  build.rs
crates/wiktionary-en-import/src/: indexing_executor.rs  main.rs
crates/wiktionary-en-lua/: Cargo.toml
crates/wiktionary-en-lua/src/: config.rs  extension.rs  extension_lua.rs  lib.rs
crates/wiktionary-entities/: Cargo.toml
files/: .gitignore
lua/: config.lua  constants.lua  features.lua  formatter.lua  history.lua  interceptor.lua  utils.lua
polodb-import/: Cargo.toml
sonic/: config.cfg  docker-compose.yaml
sonic-import/: Cargo.toml
sonic-import/src/: main.rs
src/: main.rs  wiktionary_cache.rs  wiktionary_data.rs  wiktionary_stats.rs
src/wiktionary_data/: colored_string_utils.rs  language.rs
src/wiktionary_stats/: file_reader.rs
tests/: Cargo.toml  test_config.rs  test_couchdb_client.rs  test_data_fields.rs  test_download.rs  test_extensions.rs  test_lua.rs  test_serde.rs  test_uniqueness.rs  test_utilities.rs  test_with_containers.rs
tests/common/: couchdb_container.rs
tests/data/: wiktionary-en-test.jsonl
tests/tmp/: README.md
utilities/: Cargo.toml
utilities/src/: anyhow_serde.rs  lib.rs  macros.rs
wiktionary-entities/src/: lib.rs  wiktionary_entity.rs
