[workspace]
resolver = "2"
members = ["crates/*", "tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
textwrap = "0.16.2"
edit-distance = "2.2.2"
mlua = { version = "0.11.4", features = ["lua54", "vendored", "async", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
indicatif = "0.18.3"
