[workspace]
resolver = "2"
members = ["crates/*", "tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
textwrap = "0.16.2"
edit-distance = "2.2.2"
mlua = { version = "0.12.0", features = ["lua54", "vendored", "async", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
indicatif = "0.18.6"
tokio = { version = "1.53.0", features = ["full"] }
couch_rs = "0.13.0"
colored = "3.1.1"
