[package]
name = "sonic-import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#utilities = { path = "../utilities" }
#wiktionary_entities = { version = "0.1.0", path = "../wiktionary-entities" }
sonic-channel = { version = "1.1", features = ["ingest"] }
#anyhow = "1.0"
#serde_json = "1.0"
#serde = { version = "1.0" }
#colored = "2.1.0"
#sled = "0.34"
