[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = {workspace = true}
tracing = "0.1"
tracing-test = "0.2"
utilities = { path = "../crates/utilities" }
wiktionary-en-entities = { path = "../crates/wiktionary-en-entities" }
wiktionary-en-lua = { path = "../crates/wiktionary-en-lua" }
wiktionary-en-db = { path = "../crates/wiktionary-en-db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
chrono = { version = "0.4.41" }
rstest = "0.25.0"

[[test]]
name = "test-uniqueness"
path = "test_uniqueness.rs"

[[test]]
name = "test-config"
path = "test_config.rs"

[[test]]
name = "test-extensions"
path = "test_extensions.rs"

[[test]]
name = "test-data-fields"
path = "test_data_fields.rs"

[[test]]
name = "test-serde"
path = "test_serde.rs"

[[test]]
name = "test-utilities"
path = "test_utilities.rs"
