[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
test = []
test-download = []

[dev-dependencies]
anyhow = {workspace = true}
tracing = "0.1.41"
tracing-test = "0.2.5"
utilities = { path = "../crates/utilities" }
wiktionary-en-entities = { path = "../crates/wiktionary-en-entities" }
wiktionary-en-lua = { path = "../crates/wiktionary-en-lua" }
wiktionary-en-db = { path = "../crates/wiktionary-en-db" }
wiktionary-en-download = { path = "../crates/wiktionary-en-download" }
serde_json = { workspace = true }
rstest = "0.26.1"
lazy_static = "1.5.0"
tokio = { version = "1.48.0", features = ["full"] }
serial_test = { version = "3.0", features = ["async"] }
rustainers = "0.15.1"
[[test]]
name = "test-uniqueness"
path = "test_uniqueness.rs"

[[test]]
name = "test-config"
path = "test_config.rs"

[[test]]
name = "test-extensions"
path = "test_extensions.rs"

[[test]]
name = "test-data-fields"
path = "test_data_fields.rs"

[[test]]
name = "test-utilities"
path = "test_utilities.rs"

[[test]]
name = "test-download"
path = "test_download.rs"
required-features = ["test-download"]

[[test]]
name = "test-couchdb-client"
path = "test_couchdb_client.rs"

[[test]]
name = "test-with-containers"
path = "test_with_containers.rs"

