[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
test = []
test-download = []

[dev-dependencies]
anyhow = {workspace = true}
tracing = "0.1.44"
tracing-test = "0.2.6"
utilities = { path = "../crates/utilities" }
wiktionary-en-entities = { path = "../crates/wiktionary-en-entities" }
wiktionary-en-lua = { path = "../crates/wiktionary-en-lua" }
wiktionary-en-db = { path = "../crates/wiktionary-en-db" }
wiktionary-en-download = { path = "../crates/wiktionary-en-download" }
serde_json = { workspace = true }
rstest = "0.26.1"
lazy_static = "1.5.0"
tokio = { workspace = true }
rustainers = "0.15.1"
[[test]]
name = "test-uniqueness"
path = "test_uniqueness.rs"

[[test]]
name = "test-config"
path = "test_config.rs"

[[test]]
name = "test-extensions"
path = "test_extensions.rs"

[[test]]
name = "test-data-fields"
path = "test_data_fields.rs"

[[test]]
name = "test-utilities"
path = "test_utilities.rs"

[[test]]
name = "test-download"
path = "test_download.rs"
required-features = ["test-download"]

[[test]]
name = "test-couchdb-client"
path = "test_couchdb_client.rs"
