[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textwrap= { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
colored = "3.0.0"
minus = { version = "5.6.1", features = ["static_output", "search"] }
indicatif = "0.17.11"
streaming-iterator = { version = "0.1.9" }
