[package]
name = "wiktionary-en-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wiktionary-en-entities = { version = "0.1.0", path = "../wiktionary-en-entities" }
wiktionary-en-db = { path = "../wiktionary-en-db" }
utilities = { path = "../utilities" }
clap = { version = "3.0", features = ["derive"] }
anyhow = {workspace = true} 
serde = { version = "1.0", features = ["derive"] }
colored = "2.1.0"
indoc = "1.0"
edit-distance="*"
