[package]
name = "wiktionary-en-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wiktionary-en-entities = { path = "../wiktionary-en-entities" }
wiktionary-en-db = { path = "../wiktionary-en-db" }
wiktionary-en-identifier-index = { path = "../wiktionary-en-identifier-index", optional = true }
utilities = { path = "../utilities" }
clap = { workspace = true }
anyhow = { workspace = true } 
serde = { version = "1.0", features = ["derive"] }
colored = "3.0.0"
indoc = "2.0"
edit-distance = { workspace = true }

[features]
sonic = [ "wiktionary-en-identifier-index" ]
