[package]
name = "wiktionary-en-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
wiktionary-en-entities = { path = "../wiktionary-en-entities" }
anyhow = {workspace = true}
polodb_core = "5.1.4"
rand = "0.9.2"
chrono = { version = "0.4.41" }
mlua = { workspace = true }
bson = "2.15.0"
