[package]
name = "wiktionary-en-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
wiktionary-en-entities = { path = "../wiktionary-en-entities" }
anyhow = {workspace = true}
rand = "0.9.2"
mlua = { workspace = true }
bson = "2.15.0"
couch_rs = "0.13.0"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
