[package]
name = "wiktionary-en-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
wiktionary-en-entities = { path = "../wiktionary-en-entities" }
anyhow = {workspace = true}
mlua = { workspace = true }
couch_rs = "0.13.0"
tokio = { workspace = true }
serde_json = { workspace = true }
