[package]
name = "wiktionary-en-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
anyhow = { workspace = true }
reqwest = { version = "0.10.10", features = ["stream"] }
futures-util = "0.3.31"
indicatif = "0.17.11"
tokio = { version = "0.2.25", features = ["full"] }
