[package]
name = "wiktionary-en-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
anyhow = { workspace = true }
reqwest = { version = "0.13.3", features = ["stream"] }
futures-util = "0.3.32"
indicatif = { workspace = true }
tokio = { version = "1.52.2", features = ["full"] }
