[package]
name = "wiktionary-en-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
anyhow = {workspace = true}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
colored = "3.0.0"
sled = "0.34"
indoc = "2.0"
textwrap = { workspace = true } 
mlua = { version = "0.10", features = ["lua54", "vendored"] }
