[package]
name = "wiktionary-en-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
anyhow = {workspace = true}
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
colored = "3.0.0"
sled = "0.34"
indoc = "2.0"
textwrap = { workspace = true } 
mlua = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
