[package]
name = "wiktionary-en-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
anyhow = { workspace = true }
serde = { workspace = true }
colored = "3.0.0"
indoc = "2.0"
textwrap = { workspace = true } 
mlua = { workspace = true }
