[package]
name = "wiktionary-en-identifier-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
wiktionary-en-entities = { version = "0.1.0", path = "../wiktionary-en-entities" }
sonic-channel = { version = "1.1", features = ["ingest"] }
clap = { version = "3.0", features = ["derive"] }
base64 = "*"
anyhow = {workspace = true} 
edit-distance="*"
