[package]
name = "wiktionary-en-import"
version = "0.1.0"
edition = "2021"

[dependencies]
utilities = { path = "../utilities" }
wiktionary-en-db = { path = "../wiktionary-en-db" }
wiktionary-en-identifier-index = { path = "../wiktionary-en-identifier-index", optional = true }
wiktionary-en-entities = { version = "0.1.0", path = "../wiktionary-en-entities" }
wiktionary-en-download = { version = "0.1.0", path = "../wiktionary-en-download" }
clap = { version = "3.0", features = ["derive"] }
anyhow = {workspace = true} 
streaming-iterator = { version = "0.1.9" }
minus = { version = "5.6.1", features = ["static_output", "search"] }


[features]
sonic = [ "wiktionary-en-identifier-index" ]
