[package]
name = "wiktionary-en-import"
version = "0.1.0"
edition = "2021"

[dependencies]
utilities = { path = "../utilities" }
wiktionary-en-db = { path = "../wiktionary-en-db" }
wiktionary-en-identifier-index = { path = "../wiktionary-en-identifier-index", optional = true }
wiktionary-en-download = { path = "../wiktionary-en-download" }
wiktionary-en-lua = { path = "../wiktionary-en-lua" }
clap = { workspace = true }
anyhow = {workspace = true} 
indicatif = { workspace = true }
streaming-iterator = { version = "0.1.9" }


[features]
sonic = [ "wiktionary-en-identifier-index" ]
