[package]
name = "wiktionary-en-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
utilities = { path = "../utilities" }
wiktionary-en-entities = { path = "../wiktionary-en-entities" }
anyhow = {workspace = true} 
mlua = { version = "0.10", features = ["lua54", "vendored"] }
colored = "3.0.0"
leftpad-rs = "1.1.0"
