[package]
name = "wiktionary-en-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
utilities = { path = "../utilities" }
wiktionary-en-entities = { path = "../wiktionary-en-entities" }
anyhow = {workspace = true} 
mlua = { workspace = true }
colored = "3.0.0"
wiktionary-en-db = { path = "../wiktionary-en-db" }
